# knightingale

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/knightingale-cli/: Cargo.toml
crates/knightingale-cli/src/: commands.rs  main.rs  style.rs
crates/knightingale-core/: Cargo.toml
crates/knightingale-core/src/: audio.rs  config.rs  error.rs  focus.rs  hardware.rs  hotkey.rs  injection.rs  ipc.rs  lib.rs  secret.rs  setup.rs  status.rs  tokens.rs
crates/knightingale-core/src/eval/: metrics.rs  mod.rs
crates/knightingale-core/src/model/: mod.rs  models.toml
crates/knightingale-core/src/stt/: azure.rs  local.rs  mod.rs  openai.rs  provider.rs  streaming.rs
crates/knightingale-daemon/: Cargo.toml
crates/knightingale-daemon/src/: main.rs
design-system/: README.md
design-system/cli/: banner-wide.txt  banner.txt  style-guide.md
design-system/tokens/: colors.md  tokens.css  tokens.rs
design-system/web/: typography.md  voice.md
docs/: ARCHITECTURE.md  index.html  install.sh
eval-corpus/: README.md
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/homebrew/Formula/: knightingale.rb
packaging/launchd/: dev.shatilkhan.knightingale.plist
packaging/scoop/: knightingale.json
packaging/systemd/: knightingale.service
packaging/winget/: manifest.yaml
self-host/: README.md
self-host/speaches/: docker-compose.yml
