[workspace]
resolver = "3"
members = [
    "crates/knightingale-core",
    "crates/knightingale-cli",
    "crates/knightingale-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Shatil Khan"]
license = "MIT"
repository = "https://github.com/ShatilKhan/knightingale"
homepage = "https://shatilkhan.github.io/knightingale/"

[workspace.dependencies]
knightingale-core = { path = "crates/knightingale-core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
