[package]
name = "knightingale-cli"
description = "Knightingale command-line client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "knightingale"
path = "src/main.rs"

[dependencies]
knightingale-core = { workspace = true }
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
miette = { version = "7", features = ["fancy"] }
inquire = "0.7"
comfy-table = "7"
anstyle = "1"
anstream = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1"
