[package]
name = "knightingale-core"
description = "Knightingale core: audio capture, STT clients, IPC, configuration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
