[package]
name = "knightingale-core"
description = "Knightingale core: audio capture, STT clients, IPC, configuration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
secrecy = { version = "0.10", features = ["serde"] }
dotenvy = "0.15"
cpal = "0.16"
rubato = "0.16"
ringbuf = "0.4"
tracing = "0.1"
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
enigo = "0.6"
arboard = "3"
interprocess = "2"
serde_json = "1"
global-hotkey = "0.7"
sha2 = "0.10"
keyboard-types = "0.8"

[features]
default = []
local-stt = ["dep:whisper-rs"]
vulkan = ["whisper-rs/vulkan"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]

[dependencies.whisper-rs]
version = "0.14"
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
