[package]
name = "knightingale-daemon"
description = "Knightingale background daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "knightingale-daemon"
path = "src/main.rs"

[dependencies]
knightingale-core = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
miette = { version = "7", features = ["fancy"] }
ctrlc = "3"
crossbeam-channel = "0.5"
